# youtube-sub-feed

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.ja.md  README.md  package.json  tsconfig.json
.github/workflows/: release.yml
client/: .prettierrc.json  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.svelte  global.sass  main.js
docs/: DESIGN.md  deploy.md  reference-novel-server.md  rust-migration-guide.md  spec.md
src/: auth.rs  cache.rs  config.rs  db.rs  duration.rs  error.rs  index.ts  lib.rs  main.rs  middleware.rs  notify.rs  openapi.rs  quota.rs  session.rs  spa.rs  state.rs  util.rs
src/db/: index.ts
src/lib/: auth.ts  cache.ts  channel-sync.ts  discord.ts  duration.ts  google-oauth.ts  init.ts  initial-setup.ts  livestream-checker.ts  polling.ts  quota-manager.ts  rss-checker.ts  spa.ts  token-manager.ts  video-fetcher.ts  youtube-api.ts  youtube-retry.ts  youtube-rss.ts
src/middleware/: auth.ts
src/routes/: auth.rs  auth.ts  channels.rs  channels.ts  feed.rs  feed.ts  groups.rs  groups.ts  mod.rs  news.rs  rss.rs  websub.rs
src/sync/: channel_sync.rs  initial_setup.rs  livestream.rs  mod.rs  periodic_refresh.rs  polling.rs  rss_checker.rs  subscriptions.rs  token.rs  video_enrich.rs  video_fetcher.rs
src/websub/: atom.rs  hub.rs  mod.rs  signature.rs
tests/: spec_api_routes.rs  spec_auth_session.rs  spec_cache.rs  spec_channels.rs  spec_database.rs  spec_duration.rs  spec_feed.rs  spec_groups.rs  spec_notify.rs  spec_quota.rs  spec_sync.rs  spec_videos.rs
(+58 files in other folders)
